# ez-flow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build-env.sh  eslint.config.js  index.html  package.json  playwright.config.ts  shell.nix  tailwind.config.js  tsconfig.json  vite.config.ts
.bmad-core/: install-manifest.yaml
.direnv/: nix-profile-26.05-98mad1s6hrryyflb  nix-profile-26.05-98mad1s6hrryyflb.rc
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  output.rs
cli/src/commands/: mod.rs  models.rs  record.rs  transcribe.rs
docs/: architecture.md  front-end-spec.md  prd.md
docs/epics/: epic-5-main-ui-redesign.md  epic-6-streaming-transcription.md  epic-7-voice-commands.md  epic-8-custom-vocabulary.md  epic-9-floating-preview.md
docs/qa/gates/: 4.1-model-auto-validation.yml
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  1.6.story.md  1.7.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  2.6.story.md  2.7.story.md  2.8.story.md  2.9.story.md  3.1.story.md  3.10.story.md  3.2.story.md  3.3.story.md  3.4.story.md  3.5.story.md  3.6.story.md  3.7.story.md  3.8.story.md  3.9.story.md  4.1.story.md  5.1.story.md
landing/: index.html  package.json  playwright.config.ts  server.ts  tailwind.config.js  vite.config.ts
landing/src/: Landing.svelte  app.ts  styles.css
landing/tests/: landing.spec.ts  landing.test.ts
src/: App.svelte  app.css  main.ts  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: audio.rs  history.rs  hotkey.rs  indicator.rs  mod.rs  models.rs  settings.rs  text_inject.rs  transcription.rs  vocabulary.rs  workflow.rs
src-tauri/src/models/: history.rs  mod.rs  settings.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/audio/: capture.rs  chunking.rs  level_test.rs  mod.rs  processing.rs
src-tauri/src/services/hotkey/: mod.rs
src-tauri/src/services/platform/: linux.rs  macos.rs  mod.rs  text_inject.rs  windows.rs
src-tauri/src/services/storage/: database.rs  mod.rs  settings.rs
src-tauri/src/services/streaming/: mod.rs
src-tauri/src/services/transcription/: decoder.rs  engine.rs  gpu.rs  languages.rs  mod.rs  models.rs
src-tauri/src/services/tray/: mod.rs
src-tauri/src/services/ui/: indicator.rs  mod.rs  preview.rs
src-tauri/src/services/voice_commands/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/tests/: audio_level_test.rs
src/lib/: build.test.ts
src/lib/components/: AudioVisualizer.svelte  AudioVisualizer.test.ts  BackButton.svelte  ContextPromptEditor.svelte  ContextPromptEditor.test.ts  FileDropZone.svelte  FileDropZone.test.ts  HistoryList.svelte  HistoryList.test.ts  HotkeyDisplay.svelte  HotkeyDisplay.test.ts  KeybindCapture.svelte  KeybindCapture.test.ts  LanguageSelector.svelte  LanguageSelector.test.ts  ModelManagement.test.ts  ModelSetupScreen.svelte  ModelSetupScreen.test.ts  ModelValidationModal.svelte  ModelValidationModal.test.ts  NavBar.svelte  NavBar.test.ts  RecordButton.svelte  RecordButton.test.ts  RecordingIndicator.svelte  RecordingIndicator.test.ts  TranscriptionPreview.svelte  TranscriptionPreview.test.ts  UpdateDialog.svelte  UpdateDialog.test.ts  VocabularyManager.svelte  VocabularyManager.test.ts
src/lib/services/: history.test.ts  history.ts  hotkeys.test.ts  hotkeys.ts  keybind.test.ts  keybind.ts  textInjection.test.ts  textInjection.ts  trayEvents.test.ts  trayEvents.ts  updater.test.ts  updater.ts  (+2 more)
tests/e2e/: README.md  epic-1-foundation.spec.ts  epic-2-live-workflow.spec.ts  epic-3-polish.spec.ts  epic-4-navigation.spec.ts  file-drop.spec.ts  global-setup.ts  global-teardown.ts  helpers.ts  keybind-settings.spec.ts  live-transcription-preview.spec.ts  model-management.spec.ts  story-4.1-model-validation.spec.ts
(+17 files in other folders)
