[package]
name = "ez-flow"
version = "0.1.0"
description = "Local speech-to-text that just works"
authors = ["EZ Flow Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "ez_flow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"

# Audio capture and processing
cpal = "0.15"
hound = "3.5"
rubato = "0.14"

# Transcription
whisper-rs = "0.11"
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "flac", "wav"] }
directories = "5"

# Model download
reqwest = { version = "0.11", features = ["stream"] }
sha2 = "0.10"
futures-util = "0.3"

# Text injection
arboard = "3"

# History storage
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# GPU acceleration
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
